# MVM

./: CMakeLists.txt  LICENSE.md  README.md  main.c
include/: mvm-debug.h  mvm-private.h  mvm.h  opcodes.h
include/gc/: allocator.h  collector.h
include/types/: mclass.h  mstring.h  mstringpool.h  types.h
src/: mvm.c
src/gc/: allocator.c  collector.c
src/types/: mclass.c  mstring.c  mstringpool.c  types.c
